--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,12 @@ name: Java CI with Gradle
 
 on:
   pull_request:
-    branches: [ main ]
-    
-env:
-  DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }} 
-
+    branches: [ main ]   
+#env:
+#  DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }} 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -35,10 +31,10 @@ jobs:
       timeout-minutes: 5
       env:
        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    - name: Install Datree
-      run: curl https://get.datree.io | /bin/bash
+   #- name: Install Datree
+   #  run: curl https://get.datree.io | /bin/bash
         
-    - name: Run Datree's policy check
-      run: datree test kube.yaml
+   #- name: Run Datree's policy check
+   #  run: datree test kube.yaml
 
 
