--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Java CI with Gradle
 on:
-  pull_request:
+  push:
     branches: [ main ]
 #env:
 #  DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }}
